--- a/src/yandex/style/blocks/search-line/search-line.sass
+++ b/src/yandex/style/blocks/search-line/search-line.sass
@@ -1,15 +1,17 @@
 
 .search-line
   font-size: 127%
-  margin-top: 12px
+  margin-top: .8em
 
 .search-bar
   position: relative
 
   &__logo
     position: absolute
-    right: calc(100% + 5px)
-    top: -50%
+    right: calc(100% + .03em)
+    top: -0.5em
+    fill: white
+    font-size: 8em
 
 .search
 
@@ -39,7 +41,7 @@
   &__icons
     position: absolute
     right: 100px
-    top: 3px
+    top: .05em
 
   &__commit
     font-size: 95%
