--- a/src/yandex/style/blocks/icon-bar/icon-bar.sass
+++ b/src/yandex/style/blocks/icon-bar/icon-bar.sass
@@ -6,8 +6,12 @@
   &__item
     display: inline-flex
     align-items: center
-    width: 36px
-    height: 36px
-    font-size: 36px
     justify-content: center
+
+    margin-right: 0.75em
+
+    font-size: 1.6em
+
+
+
 
