--- a/src/yandex/style/blocks/road/road.sass
+++ b/src/yandex/style/blocks/road/road.sass
@@ -2,16 +2,16 @@
 
   &__header
     font-size: 90%
-    margin-bottom: 8px
+    margin-bottom: .6em
 
   &__body
     display: flex
     align-items: center
 
   &__image
-    flex-basis: 38px
-    margin-right: 10px
+    font-size: 2.4em
+    margin-right: .5em
 
   &__grade
-    font-size: 26px
-    margin-right: 10px
+    font-size: 1.8em
+    margin-right: .6em
