--- a/src/yandex/style/blocks/values-list/values-list.sass
+++ b/src/yandex/style/blocks/values-list/values-list.sass
@@ -2,17 +2,17 @@
 .values-list
   &__item
     display: inline-block
-    margin-right: 10px
+    margin-right: 0.75em
 
   &__name
     font-size: .94em
-    margin-right: 5px
-    font-weight: bolder
+    margin-right: 0.5em
+    font-weight: 600
     text-transform: uppercase
 
   &__value
     color: #bfbfbf
-    margin-right: 5px
+    margin-right: 0.5em
 
   &__diff
     color: #999
