--- a/src/yandex/style/blocks/weather/weather.sass
+++ b/src/yandex/style/blocks/weather/weather.sass
@@ -1,20 +1,20 @@
 
 .weather
-  margin-bottom: 16px
+  margin-bottom: 1em
 
   &__header
-    margin-bottom: 8px
+    margin-bottom: 0.5em
 
   &__image
-    margin-right: 5px
+    margin-right: .3em
 
   &__item
-    font-size: 26px
-    margin-right: 14px
+    font-size: 1.8em
+    margin-right: .3em
     align-items: center
 
     &._small
-      font-size: 12px
+      font-size: 0.8em
       position: relative
       vertical-align: bottom
 
