--- a/src/yandex/style/blocks/search-line/search-line.sass
+++ b/src/yandex/style/blocks/search-line/search-line.sass
@@ -19,7 +19,7 @@
 
   &__form
     display: flex
-    border: 0.2em solid #fc0
+    border: 0.2em solid $yandex-yellow
     background: #fc0
     height: 2.1663em
     border-radius: .625em
