--- a/src/yandex/style/blocks/weather/weather.sass
+++ b/src/yandex/style/blocks/weather/weather.sass
@@ -23,4 +23,4 @@
         content: attr(data-daytime)
         position: absolute
         top: -100%
-        color: rgba(195, 195, 195, .65)
+        @include gray-color()
