--- a/src/yandex/style/blocks/widget/widget.sass
+++ b/src/yandex/style/blocks/widget/widget.sass
@@ -4,11 +4,11 @@
   flex-direction: column
   justify-content: space-between
   align-items: center
-  background-color: #222
-  padding: 7px 15px
-  border-radius: 7px
+  background-color: $widget-background-color
+  padding: .5em 1em
+  border-radius: .5em
   transition: all ease 0.3s
-  margin-bottom: 7px
+  margin-bottom: .5em
 
   &._hover-jump:hover
     transform: translate(-5%, 0)
