--- a/src/yandex/style/blocks/zen-section/zen-section.sass
+++ b/src/yandex/style/blocks/zen-section/zen-section.sass
@@ -16,9 +16,9 @@
 
   &__elem
     padding: 1em 2.5%
-    background-color: #1D1E22
+    background-color: $zen-background-color
     transition: background-color 0.3s ease
     border-radius: 1.3em
 
     &._hover-lighter:hover
-      background-color: #242529
+      background-color: $zen-hover-background-color
