--- a/src/yandex/style/blocks/category-list/category-list.sass
+++ b/src/yandex/style/blocks/category-list/category-list.sass
@@ -1,24 +1,19 @@
 
 .category-list
   &__item
-    font-size: 127%
-    font-family: 'Yandex Sans Text', Arial, sans-serif
-    font-weight: 500
     margin-right: 0.5em
-    color: #5a82b8
+
+    font-size: 1.27em
+    @include bold-text()
+    @include menu-color()
     opacity: 0.75
 
     &._active
       opacity: 1
-      font-weight: 600
 
     &._warning
       color: #ee7b00
-      font-size: 100%
-      line-height: 1.36
-      font-weight: normal
+      font-size: 1rem
+      @include normal-text()
       vertical-align: bottom
-
-  &__text
-    color: rgba(90, 130, 184, 1)
 
