--- a/src/yandex/style/blocks/mail/mail.sass
+++ b/src/yandex/style/blocks/mail/mail.sass
@@ -4,13 +4,13 @@
     font-size: 1em
     width: 100%
     align-items: center
-    margin-bottom: 10px
+    margin-bottom: .6em
 
     &._mail-line
-      font-weight: 600
+      @include bold-text()
       justify-content: space-between
 
   &__messages-total
     margin-left: 3%
-    font-weight: 600
+    @include bold-text()
 
