--- a/src/yandex/style/blocks/page-footer/page-footer.sass
+++ b/src/yandex/style/blocks/page-footer/page-footer.sass
@@ -11,7 +11,7 @@
   width: 100%
   padding: 0 1.5% .6em
 
-  background-color: #15161a
+  background-color: $footer-color
 
   &__links-list
     margin: 0
