--- a/src/yandex/style/blocks/values-list/values-list.sass
+++ b/src/yandex/style/blocks/values-list/values-list.sass
@@ -7,11 +7,11 @@
   &__name
     font-size: .94em
     margin-right: 0.5em
-    font-weight: 600
+    @include bold-text()
     text-transform: uppercase
 
   &__value
-    color: #bfbfbf
+    @include base-color()
     margin-right: 0.5em
 
   &__diff
