--- a/src/yandex/style/blocks/zen-categories/zen-categories.sass
+++ b/src/yandex/style/blocks/zen-categories/zen-categories.sass
@@ -6,14 +6,14 @@
     display: flex
     align-items: center
     font-size: 1.2em
-    font-weight: bold
+    @include bold-text()
     margin-bottom: .6em
 
   &__subheader
     text-transform: uppercase
-    color: rgba(255, 255, 255, 0.8)
+    @include gray-color()
     font-size: .8em
-    font-weight: 500
+    @include bold-text()
     margin-bottom: .6em
 
   &__list
