HTML-CSS-learning-2 / dev / yandex     - Завершил допиливание

--- a/src/yandex/style/main.sass
+++ b/src/yandex/style/main.sass
@@ -23,6 +23,7 @@ body
 @import "blocks/icon-bar/icon-bar"
 @import "blocks/category-list/category-list"
 @import "blocks/news/news"
+@import "blocks/news-list/news-list"
 @import "blocks/weather/weather"
 @import "blocks/road/road"
 @import "blocks/link-bar/link-bar"
