HTML-CSS-learning-2 / dev / yandex     - Завершил допиливание

--- a/src/yandex/style/blocks/datetime/datetime.sass
+++ b/src/yandex/style/blocks/datetime/datetime.sass
@@ -1,5 +1,6 @@
 @import "../../animations/animations"
 @import "../../common/font"
+@import "../../common/colors"
 
 .datetime
   @include gray-color()
