HTML-CSS-learning-2 / dev / yandex     - Сделал некоторые исправления

--- a/src/yandex/style/blocks/category-list/category-list.sass
+++ b/src/yandex/style/blocks/category-list/category-list.sass
@@ -1,9 +1,9 @@
-@import "../../common/colors"
-@import "../../common/font"
+@import "../../common/common"
+@import "../../common/common"
 
 .category-list
   &__item
-    margin-right: 0.5em
+    margin-right: 0.4em
 
     font-size: 1.27em
     @include bold-text()
