--- a/src/yandex/style/blocks/datetime/datetime.sass
+++ b/src/yandex/style/blocks/datetime/datetime.sass
@@ -1,6 +1,6 @@
 @import "../../animations/animations"
-@import "../../common/font"
-@import "../../common/colors"
+@import "../../common/common"
+@import "../../common/common"
 
 .datetime
   @include gray-color()
