--- a/src/yandex/style/blocks/link/link.sass
+++ b/src/yandex/style/blocks/link/link.sass
@@ -1,5 +1,4 @@
-@import "../../common/colors"
-@import "../../common/font"
+@import "../../common/common"
 
 .link
   display: inline-flex
@@ -82,7 +81,7 @@
 
     &._service
       @extend ._size-of-text
-      font-size: 2em
+      font-size: 3em
 
     &._geo
       margin-right: 0.5em
@@ -93,3 +92,13 @@
     &._no-margin
       margin: 0
 
+    &._small
+      font-size: .4em
+
+    &._user
+      font-size: 1.5em
+
+    &._folder
+      display: flex
+      flex-wrap: wrap
+      justify-content: center
