--- a/src/yandex/style/blocks/top-bar/top-bar.sass
+++ b/src/yandex/style/blocks/top-bar/top-bar.sass
@@ -1,7 +1,7 @@
 
 .top-bar
   margin-top: .3rem
-  margin-right: 13.3rem
-  padding: 0 0.4rem 0 1.3rem
+  margin-right: 14.5rem
+  padding: 0.2em 0.4em 0 1.3em
   font-size: .94em
   line-height: 3em
