--- a/src/yandex/style/blocks/page-footer/page-footer.sass
+++ b/src/yandex/style/blocks/page-footer/page-footer.sass
@@ -1,11 +1,11 @@
-@import "../../common/colors"
+@import "../../common/common"
 
 .page-footer
   display: flex
   flex-direction: row
   justify-content: space-between
   align-items: center
-  position: absolute
+  position: fixed
   bottom: 0
   left: 0
 
