--- a/src/yandex/style/blocks/search-line/search-line.sass
+++ b/src/yandex/style/blocks/search-line/search-line.sass
@@ -1,54 +1,6 @@
-@import "../../common/colors"
+@import "../../common/common"
 
 
 .search-line
   font-size: 127%
   margin-top: .8em
-
-.search-bar
-  position: relative
-
-  &__logo
-    position: absolute
-    right: calc(100% + .03em)
-    top: -0.5em
-    fill: white
-    font-size: 8em
-
-.search
-
-  font-size: 123.1%
-
-  &__form
-    display: flex
-    border: 0.2em solid $yandex-yellow
-    background: #fc0
-    height: 2.1663em
-    border-radius: .625em
-    position: relative
-
-  .search__input-block
-    flex-basis: 100%
-
-  &__input
-    height: 100%
-    width: 100%
-    border: none
-    border-radius: .625rem .375rem .375rem .625rem
-    position: relative
-    color: black
-    padding-left: 0.8em
-    font-size: 80%
-
-  &__icons
-    position: absolute
-    right: 100px
-    top: .05em
-
-  &__commit
-    font-size: 95%
-
-    border: none
-    background: none
-    cursor: pointer
-    flex-basis: 90px
