--- a/src/yandex/style/blocks/social/social.sass
+++ b/src/yandex/style/blocks/social/social.sass
@@ -1,5 +1,5 @@
-@import "../../common/colors"
-@import "../../common/font"
+@import "../../common/common"
+@import "../../common/common"
 
 .social
   display: flex
