--- a/src/yandex/style/blocks/values-list/values-list.sass
+++ b/src/yandex/style/blocks/values-list/values-list.sass
@@ -1,5 +1,5 @@
-@import "../../common/font"
-@import "../../common/colors"
+@import "../../common/common"
+@import "../../common/common"
 
 .values-list
   &__item
