--- a/src/yandex/style/blocks/zen-article/zen-article.sass
+++ b/src/yandex/style/blocks/zen-article/zen-article.sass
@@ -1,5 +1,5 @@
-@import "../../common/colors"
-@import "../../common/font"
+@import "../../common/common"
+@import "../../common/common"
 
 
 .zen-article
