--- a/src/yandex/style/blocks/zen-categories/zen-categories.sass
+++ b/src/yandex/style/blocks/zen-categories/zen-categories.sass
@@ -1,5 +1,5 @@
-@import "../../common/font"
-@import "../../common/colors"
+@import "../../common/common"
+@import "../../common/common"
 
 .zen-categories
   padding-left: 5%
