--- a/src/yandex/style/blocks/zen-section/zen-section.sass
+++ b/src/yandex/style/blocks/zen-section/zen-section.sass
@@ -1,4 +1,4 @@
-@import "../../common/colors"
+@import "../../common/common"
 
 .zen-section
   padding-top: 1.3em
@@ -9,11 +9,11 @@
     flex-direction: row
 
   &__main-part
-    flex: 1 0 66.6%
+    flex: 1 0 70%
     margin-right: .3em
 
   &__side-part
-    flex: 0 0 33.3%
+    flex: 0 0 30%
 
   &__elem
     padding: 1em 2.5%
