HTML-CSS-learning-2 / dev / yandex     - Сделал некоторые исправления

--- a/src/yandex/style/blocks/search/search.sass
+++ b/src/yandex/style/blocks/search/search.sass
@@ -26,6 +26,9 @@
     padding-right: 5em
     font-size: .8em
 
+    &:focus
+      outline: none
+
   &__icons
     position: absolute
     right: 5em
