HTML-CSS-learning-2 / dev / yandex     - Сделал некоторые исправления

--- a/src/yandex/style/blocks/category-list/category-list.sass
+++ b/src/yandex/style/blocks/category-list/category-list.sass
@@ -1,21 +1,18 @@
 @import "../../common/common"
-@import "../../common/common"
 
 .category-list
+  @include text-main-light()
+
   &__item
+    @include text-set-color($color-menu-inactive)
     margin-right: 0.4em
 
     font-size: 1.27em
-    @include bold-text()
-    @include menu-color()
-    opacity: 0.75
 
     &._active
-      opacity: 1
+      @include text-set-color($color-menu)
 
     &._warning
-      @include normal-text()
-      font-size: 1rem
-      color: #ee7b00
-      vertical-align: bottom
+      @include text-main-light($color-warning)
 
+      vertical-align: sub
