--- a/src/yandex/style/blocks/layout/layout.sass
+++ b/src/yandex/style/blocks/layout/layout.sass
@@ -1,3 +1,4 @@
+@import "../../common/common"
 
 .layout
   display: flex
@@ -6,7 +7,7 @@
     flex-direction: column
 
   &._container
-    width: 57rem
+    width: $size-container-width
     justify-content: center
     margin: 0 auto
 
