--- a/src/yandex/style/blocks/news-list/news-list.sass
+++ b/src/yandex/style/blocks/news-list/news-list.sass
@@ -1,8 +1,10 @@
+@import "../../common/common"
 
 .news-list
   &__item
+    @include text-main()
     display: flex
     align-items: baseline
     max-width: 95%
-    line-height: 1.36
+    vertical-align: center
     margin-bottom: 0.4em
