--- a/src/yandex/style/blocks/page-footer/page-footer.sass
+++ b/src/yandex/style/blocks/page-footer/page-footer.sass
@@ -1,6 +1,7 @@
 @import "../../common/common"
 
 .page-footer
+  @include text-main()
   display: flex
   flex-direction: row
   justify-content: space-between
@@ -12,7 +13,6 @@
   width: 100%
   padding: 0 1.5% .6em
 
-  background-color: $footer-color
 
   &__links-list
     margin: 0
