--- a/src/yandex/style/blocks/plus/plus.sass
+++ b/src/yandex/style/blocks/plus/plus.sass
@@ -1,3 +1,9 @@
+@import "../../common/common"
+
 .plus
   justify-content: start
   align-items: center
+
+  @include text-main($color-base-text)
+
+  background-color: $color-page-elem-background
