--- a/src/yandex/style/blocks/search/search.sass
+++ b/src/yandex/style/blocks/search/search.sass
@@ -2,12 +2,13 @@
 
 .search
 
-  font-size: 1.2em
+  font-size: 1.1em
 
   &__form
     display: flex
-    border: .17em solid $yandex-yellow
-    background: #fc0
+    padding: 0.1em
+
+    background: $yandex-yellow
     height: 2.1663em
     border-radius: .625em
     position: relative
@@ -19,11 +20,11 @@
     height: 100%
     width: 100%
     border: none
-    border-radius: .625rem .375rem .375rem .625rem
+    border-radius: .625em .375em .375em .625em
     position: relative
     color: black
     padding-left: 0.8em
-    padding-right: 5em
+    padding-right: 6em
     font-size: .8em
 
     &:focus
@@ -32,7 +33,7 @@
   &__icons
     position: absolute
     right: 5em
-    top: .15em
+    top: .2em
 
   &__commit
     font-size: .9em
