--- a/src/yandex/style/common/common.sass
+++ b/src/yandex/style/common/common.sass
@@ -1,4 +1,7 @@
+@import "reset"
 @import "font-import"
 @import "font"
 @import "colors"
+@import "sizes"
 @import "mixin"
+@import "../animations/animations"
