--- a/src/yandex/style/common/font.sass
+++ b/src/yandex/style/common/font.sass
@@ -6,3 +6,8 @@ $base-font-size: .9375em
 $normal-font-weight: 400
 $bold-font-weight: 600
 $light-font-weight: 300
+
+$top-bar-font-size: .88em
+$top-bar-line-height: 2.75em
+
+$normal-line-height: 1.5em
