--- a/src/yandex/style/blocks/icon-bar/icon-bar.sass
+++ b/src/yandex/style/blocks/icon-bar/icon-bar.sass
@@ -8,9 +8,14 @@
     align-items: center
     justify-content: center
 
-    margin-right: 0.75em
-
     font-size: 1.6em
+
+    &._spaced
+      margin-right: .75em
+
+      &:last-child
+        margin-right: 0
+
 
 
 
