--- a/src/yandex/style/blocks/top-bar/top-bar.sass
+++ b/src/yandex/style/blocks/top-bar/top-bar.sass
@@ -1,7 +1,8 @@
+@import "../../common/common"
 
 .top-bar
-  margin-top: .3rem
-  margin-right: 14.5rem
+  margin-top: .3em
+  margin-right: 18em
   padding: 0.2em 0.4em 0 1.3em
-  font-size: .94em
-  line-height: 3em
+  font-size: $top-bar-font-size
+  line-height: $top-bar-line-height
