--- a/src/yandex/style/blocks/values-list/values-list.sass
+++ b/src/yandex/style/blocks/values-list/values-list.sass
@@ -2,19 +2,21 @@
 @import "../../common/common"
 
 .values-list
+
   &__item
     display: inline-block
     margin-right: 0.75em
+    @include text-main($color-base-text)
 
   &__name
-    font-size: .94em
+    @include text-set-color($color-base-text)
     margin-right: 0.5em
-    @include bold-text()
+
     text-transform: uppercase
 
   &__value
-    @include base-color()
+
     margin-right: 0.5em
 
   &__diff
-    color: #999
+    @include text-info
