--- a/src/yandex/style/blocks/news-list/news-list.sass
+++ b/src/yandex/style/blocks/news-list/news-list.sass
@@ -1,10 +1,11 @@
 @import "../../common/common"
 
 .news-list
+  font-size: $news-list-font-size
+
   &__item
     @include text-main()
     display: flex
     align-items: baseline
     max-width: 95%
-    vertical-align: center
-    margin-bottom: 0.4em
+    margin-bottom: 0.55em
