--- a/src/yandex/style/blocks/road/road.sass
+++ b/src/yandex/style/blocks/road/road.sass
@@ -1,17 +1,12 @@
 .road
-
-  &__header
-    font-size: .85em
-    margin-bottom: .6em
-
   &__body
     display: flex
     align-items: center
 
   &__image
-    font-size: 4em
+    font-size: $road-image-font-size
     margin-right: .5em
 
   &__grade
-    font-size: 1.8em
+    font-size: $road-grade-font-size
     margin-right: .3em
