--- a/src/yandex/style/blocks/search-bar/search-bar.sass
+++ b/src/yandex/style/blocks/search-bar/search-bar.sass
@@ -2,13 +2,13 @@
 .search-bar
   position: relative
 
-  font-size: 1.2em
+  font-size: $search-bar-font-size
 
   &__logo
     position: absolute
     right: calc(100% + .03em)
     top: -0.4em
     fill: white
-    font-size: 8em
+    font-size: $search-bar-logo-font-size
 
 
