--- a/src/yandex/style/blocks/search/search.sass
+++ b/src/yandex/style/blocks/search/search.sass
@@ -2,7 +2,7 @@
 
 .search
 
-  font-size: 1.1em
+  font-size: $search-font-size
 
   &__form
     display: flex
@@ -25,7 +25,7 @@
     color: black
     padding-left: 0.8em
     padding-right: 6em
-    font-size: .8em
+    font-size: $search-input-font-size
 
     &:focus
       outline: none
@@ -36,7 +36,7 @@
     top: .2em
 
   &__commit
-    font-size: .9em
+    font-size: $search-commit-font-size
     padding: 0 1em
 
     border: none
