--- a/src/yandex/style/common/font.sass
+++ b/src/yandex/style/common/font.sass
@@ -11,3 +11,26 @@ $top-bar-font-size: .88em
 $top-bar-line-height: 2.75em
 
 $normal-line-height: 1.5em
+
+$icon-bar-font-size: 1.6em
+$category-list-font-size: .94em
+$category-list-item-font-size: 1em
+$search-font-size: 1.1em
+$search-input-font-size: .8em
+$search-commit-font-size: .9em
+$link-small-font-size: .4em
+$link-user-font-size: 1.5em
+$link-service-font-size: 2.5em
+$service-text-font-size: .8em
+$link-service-folder-font-size: 2.3em
+$service-foldered-font-size: .5em
+$link-weather-value-font-size: .75em
+$link-road-image-font-size: 1.3em
+$page-elem-values-font-size: .9em
+$news-list-font-size: .9em
+$road-image-font-size: 4em
+$road-grade-font-size: 1.8em
+$search-bar-font-size: 1.2em
+$search-bar-logo-font-size: 8em
+$weather-font-size: .8em
+$weather-small-font-size: .75em
