--- a/src/yandex/style/main.sass
+++ b/src/yandex/style/main.sass
@@ -26,7 +26,7 @@ body
 @import "blocks/values-list/values-list"
 @import "blocks/icon-bar/icon-bar"
 @import "blocks/category-list/category-list"
-@import "blocks/news/news"
+@import "blocks/page-elem/page-elem"
 @import "blocks/news-list/news-list"
 @import "blocks/weather/weather"
 @import "blocks/road/road"
