--- a/src/yandex/style/blocks/icon-bar/icon-bar.sass
+++ b/src/yandex/style/blocks/icon-bar/icon-bar.sass
@@ -1,3 +1,4 @@
+@import "../../common/common"
 
 .icon-bar
   display: flex
@@ -8,7 +9,7 @@
     align-items: center
     justify-content: center
 
-    font-size: 1.6em
+    font-size: $icon-bar-font-size
 
     &._spaced
       margin-right: .75em
