--- a/src/yandex/style/blocks/image-bar/image-bar.sass
+++ b/src/yandex/style/blocks/image-bar/image-bar.sass
@@ -4,10 +4,8 @@
   display: flex
 
   &__elem
+    border: .15em solid $color-page-elem-background
     border-radius: 50%
-    border-width: .15em
-    border-color: $color-page-elem-background
-    border-style: solid
 
     display: block
     position: relative
@@ -20,5 +18,3 @@
     &:first-child
       right: 0
       z-index: 1
-
-
